# openapi.yaml
@@ -6,6 +6,24 @@ servers:
 - url: http://localhost:8080
   description: Generated server url
 paths:
+  /api/users/{user}:
+    put:
+      tags:
+      - user-controller
+      operationId: randomPut
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/User"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/User"
   /api/users/{id}:
     get:
       tags:
